<resources>
    <string name="app_name">Friends Posts</string>
    <string name="action_settings">Settings</string>
    <string name="addicon">AddIcon</string>
    <string name="image_to_add">Image_to_add</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>
    <string name="submit">Submit</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="post1_image">post_image</string>
    <string name="enter_your_name">Enter name..</string>
    <string name="enter_your_e_mail">Enter E-mail..</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your Email..</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="image_profile">image_profile</string>
    <string name="enter_username">Enter username</string>
    <string name="done">DONE</string>
    <string name="user_name">User name</string>
    <string name="singleimage">SingleImage</string>
    <string name="delete_image">Delete Image</string>
    <string name="welcome_to_the_friends_posts">Welcome to the Friends Posts</string>
</resources>
