<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tawfeeq.postapp.PostActivity">


    <ImageButton
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/image_to_add"
        android:background="@drawable/addimage"
        android:layout_gravity="center"
        android:onClick="imageButtonClicked"
        android:id="@+id/imagebutton"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/editshape"
        android:textColor="@color/colorAccent"
        android:id="@+id/edit_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/editshape"
        android:textColor="@color/colorAccent"
        android:id="@+id/edit_desc"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        style="@color/colorPrimary"
        android:onClick="submitButtonClicked"
        android:background="@drawable/editshape"/>
</LinearLayout>
