<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="16dp"
    tools:context="com.example.tawfeeq.postapp.SetupActivity">

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image_profile"
        android:onClick="profileImageClicked"
        android:background="@drawable/profile"
        android:id="@+id/setup_image_button"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/display_name"
        android:hint="@string/enter_username"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/editshape"
        android:padding="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:background="@drawable/editshape"
        style="@color/colorPrimary"
        android:onClick="doneButtonClicked"/>
</LinearLayout>
